--- a/apunts-regressio-models-metode.html
+++ b/apunts-regressio-models-metode.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Albert Mata" />
 
-<meta name="date" content="2018-02-10" />
+<meta name="date" content="2018-04-10" />
 
 <title>Regressió Models Mètode</title>
 
@@ -1500,7 +1500,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">Regressió Models Mètode</h1>
 <h4 class="author"><em>Albert Mata</em></h4>
-<h4 class="date"><em>02/10/2018</em></h4>
+<h4 class="date"><em>04/10/2018</em></h4>
 
 </div>
 
@@ -1545,8 +1545,12 @@ div.tocify {
 <li>One variable, denoted <span class="math inline">\(x\)</span>, is regarded as the <strong>predictor</strong>, explanatory, or independent variable.</li>
 <li>The other variable, denoted <span class="math inline">\(y\)</span>, is regarded as the <strong>response</strong>, outcome, or dependent variable.</li>
 </ul>
-<p><strong>Simple</strong>: one predictor variable. <strong>Multiple</strong>: two or more predictor variables.</p>
-<p>We are only interested in statistical relationships (relationship between variables being not perfect). So we won’t consider deterministic relationships where an equation exactly describes the relationship between two variables.</p>
+<p><strong>Simple</strong> because it has one predictor variable. <strong>Multiple</strong> when it has two or more predictor variables.</p>
+<p><strong>Linear</strong> because the parameters enter linearly, but the predictors themselves do not have to be linear. For example, this is a linear model:</p>
+<p><span class="math display">\[Y = \beta_0 + \beta_1 X_1 + \beta_2 log X_2 + \beta_3 X_1 X_2 + \varepsilon\]</span></p>
+<p>But this is <strong>not</strong> a linear model:</p>
+<p><span class="math display">\[Y = \beta_0 + \beta_1 X_1^{\beta_2} + \varepsilon\]</span></p>
+<p>We are only interested in statistical relationships (relationship between variables being not perfect). So we won’t consider deterministic relationships where an equation exactly describes the relationship between two variables. Linear models may seem rather restrictive, but because the predictors can be transformed and combined in any way, they are actually very flexible. Linear is also used to refer to straight lines, but linear models can be curved.</p>
 <p>The equation for the best fitting line is:</p>
 <p><span class="math display">\[\hat{y_i} = b_0 + b_1x_i\]</span></p>
 <p>We call <span class="math inline">\(b_0\)</span> <strong>intercept</strong> and <span class="math inline">\(b_1\)</span> <strong>slope</strong>. But our predictions (<span class="math inline">\(\hat{y_i}\)</span>) won’t be perfectly correct, as they include some prediction error (or <strong>residual error</strong>):</p>
